--- a/app-1service-pod.yaml
+++ b/app-1service-pod.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: nginx
+    app: saidurgab
   ports:
     - port: 80
       # By default and for convenience, the `targetPort` is set to
